default/objects/Customer_Visit_Details__c/fields/Action_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Action_Agreed__c</fullName>
    <label>Action Agreed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>