default/objects/Customer_Visit_Details__c/fields/Action_To_Be_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_To_Be_Taken__c</fullName>
    <label>Action To Be Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>