default/objects/Customer_Visit_Details__c/fields/Customer_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interaction__c</fullName>
    <label>Customer Interaction</label>
    <referenceTo>Customer_Interaction__c</referenceTo>
    <relationshipLabel>Customer Visit Details</relationshipLabel>
    <relationshipName>Customer_Visit_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>