default/objects/Customer_Visit_Details__c/fields/Customer_Visit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit__c</fullName>
    <label>Customer Visit</label>
    <referenceTo>Customer_Visit__c</referenceTo>
    <relationshipLabel>Customer Visit Details</relationshipLabel>
    <relationshipName>Customer_Visit_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>