default/objects/Customer_Visit_Details__c/fields/Point_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Point_Discussed__c</fullName>
    <label>Point Discussed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>