default/objects/Customer_Visit_Details__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Visit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>